# fleet-ops-copilot

./: .env.example  .gitignore  BUILDPLAN.md  pyproject.toml
fleet_ops/data/: generate.py
