[project]
name = "fleet-ops-copilot"
version = "0.1.0"
description = "Multi-agent fleet operations assistant — LangGraph + OpenAI Agents SDK, DuckDB, FastAPI"
requires-python = ">=3.12"
dependencies = [
    "langraph",
    "openai",
    "duckdb",
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "truststore",
    "faker",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fleet_ops*"]
